--- a/HotelManagement/HotelManagement/Views/Staffs/Delete.cshtml
+++ b/HotelManagement/HotelManagement/Views/Staffs/Delete.cshtml
@@ -3,62 +3,67 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="login-container">
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Staff</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
+    <h2>Delete</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Staff</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.name)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.email)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.email)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.email)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.password)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.email)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.password)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.phoneNumber)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.password)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.phoneNumber)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.phoneNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.isManager)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.phoneNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.isManager)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.isManager)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.isManager)
+            </dd>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        </dl>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+
 </div>
