--- a/HotelManagement/HotelManagement/Views/Staffs/Details.cshtml
+++ b/HotelManagement/HotelManagement/Views/Staffs/Details.cshtml
@@ -3,56 +3,59 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="login-container">
 
-<h2>Details</h2>
 
-<div>
-    <h4>Staff</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
+    <h2>Details</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
+    <div> 
+        <h4>Staff</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.name)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.email)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.email)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.email)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.password)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.email)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.password)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.password)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.phoneNumber)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.password)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.phoneNumber)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.phoneNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.isManager)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.phoneNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.isManager)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.isManager)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.isManager)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.staffId }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.staffId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
