--- a/HotelManagement/HotelManagement/Content/loginStyle.css
+++ b/HotelManagement/HotelManagement/Content/loginStyle.css
@@ -1,20 +1,20 @@
-﻿/*.login-container {
+﻿.login-container {
     background-image: url('imgs/background-with-shadow-tree.jpg'); 
-    background-size: cover;*/ /* Cover the entire container */
-    /*background-position: center;*/ /* Center the background image */
-    /*background-repeat: no-repeat;*/
+    background-size: cover;  
+    background-position: center;  
+    background-repeat: no-repeat;
 
-   /* background-color: #cae8ce;*/
-    /*color: #43587a;*/ /* Text color for contrast */
-    /*padding: 20px;*/ /* Add padding for spacing */
-    /*border-radius: 10px;*/ /* Rounded corners for a nicer look */
-    /*box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);*/ /* Add a shadow for depth */
-    /*margin: 0 auto;*/ /* Center the container horizontally */
-   /* max-width: 400px;*/ /* Limit the container width */
-    /*margin-top: 50px;*/
-    /*margin-bottom: 250px;*/
-    /*justify-content: center;
-}*/
+    background-color: #cae8ce;
+    color: #43587a; 
+    padding: 20px; 
+    border-radius: 10px;  
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
+    margin: 0 auto;  
+    max-width: 400px;  
+    margin-top: 50px;
+    margin-bottom: 250px;
+    justify-content: center;
+}
 
 .form-group {
     margin-bottom: 20px; /* Adjust the margin to control spacing */
