commit for sprint 1

--- a/HotelManagement/HotelManagement/Views/Staffs/Index.cshtml
+++ b/HotelManagement/HotelManagement/Views/Staffs/Index.cshtml
@@ -5,56 +5,59 @@
 }
 
 
-    <h2>Index</h2>
+<h2>Index</h2>
 
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<p>
+    @Html.ActionLink("Manage Reservations", "ManageReservations")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.password)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.phoneNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.isManager)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.phoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.isManager)
-            </th>
-            <th></th>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.password)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.phoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.isManager)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.staffId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.staffId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.staffId })
+            </td>
         </tr>
+    }
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.password)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.phoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.isManager)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.staffId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.staffId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.staffId })
-                </td>
-            </tr>
-        }
-
-    </table>
+</table>
 
